tests/negative_tests/scope_errors/no_main.c
// INVALID - possibly required to have main
int foo() {
    return 42;
}
// ERROR: no main function (if required)
